@@ -1,0 +1,77 @@
+use strict;
+use warnings;
+package Test::File::ShareDir;
+
+# ABSTRACT: Create a Fake ShareDir for your modules for testing.
+
+=head1 SYNOPSIS
+
+    use Test::More;
+
+    use FindBin;
+
+    use Test::File::ShareDir
+        -root => "$FindBin::Bin/../",
+        -share => {
+            -module => { 'My::Module' => 'share/MyModule' }
+        };
+
+    use My::Module;
+
+    use File::ShareDir qw( module_dir );
+
+    module_dir( 'My::Module' ) # dir with files from $dist/share/MyModule
+
+=cut
+
+=head1 DESCRIPTION
+
+At present, this module only has support for creating test-worth 'module' sharedirs, and then
+these are 'new' style sharedirs and are NOT compatible with old File::ShareDirs.
+
+=cut
+
+
+
+use File::Temp qw( tempdir );
+use Path::Class qw( dir );
+use File::Copy::Recursive qw( rcopy );
+use File::ShareDir 1.00 qw();
+
+sub import {
+    my $class = shift;
+    my ( %config ) = @_ ;
+    if( not exists $config{-root} ){
+        require Carp;
+        Carp::confess('Need -root => for Test::File::ShareDir');
+    }
+    if( not exists $config{-share} ){
+        require Carp;
+        Carp::confess('Need -share for Test::File::ShareDir');
+    }
+
+    my $rootdir = dir( $config{-root} );
+    my $modules = {};
+
+    if( exists $config{-share}->{-module} ){
+        $modules = delete $config{-share}->{-module};
+    }
+
+    if( keys %{ $config{-share} } ){
+        require Carp;
+        Carp::confess('Unsupported -share types : ' . join q{ }, keys %{ $config{-share} } );
+    }
+
+    my $tempdir = dir(tempdir( CLEANUP => 1 ));
+    my $module_share_dir_root = $tempdir->subdir('auto/share/module');
+    $module_share_dir_root->mkpath();
+
+    for my $module ( keys %{ $modules } ){
+        my $sourcedir = $rootdir->subdir( $modules->{$module} );
+        my $targetdir = $module_share_dir_root->subdir( File::ShareDir::_module_subdir( $module ) );
+        #print "Copy $sourcedir to $targetdir\n";
+        rcopy( $sourcedir, $targetdir );
+    }
+    unshift @INC, $tempdir->stringify;
+}
+1;
